project(cmake)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "-Wall -DMACOS -D_DARWIN_C_SOURCE")
set(CMAKE_C_FLAGS_DEBUG "-ggdb -O0")
set(APUE_HEADER "${CMAKE_HOME_DIRECTORY}/include/apue.h")
include_directories(include)
add_subdirectory(lib)
add_executable(run main.c ${APUE_HEADER})
target_link_libraries(run apue)